force-app/main/default/objects/WelcomeCall_Group__c/WelcomeCall_Group__c.object-meta.xml
<CustomObject>
    <label>Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>