force-app/main/default/objects/WelcomeCall_Group__c/fields/WelcomeCall_Criteria__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Criteria__c</fullName>
    <label>Criteria</label>
    <length>100</length>
    <type>Text</type>
</CustomField>