force-app/main/default/objects/WelcomeCall_Group__c/fields/WelcomeCall_Last_Priority__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Last_Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Last Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>