force-app/main/default/objects/WelcomeCall_Group__c/fields/WelcomeCall_Status__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FgActive</label>
    <type>Checkbox</type>
</CustomField>