force-app/main/default/objects/WelcomeCall_Group__c/listViews/All_Groups.listView-meta.xml
<ListView>
    <fullName>All_Groups</fullName>
    <columns>NAME</columns>
    <columns>WelcomeCall_Criteria__c</columns>
    <columns>WelcomeCall_Entity__c</columns>
    <columns>WelcomeCall_Last_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Groups</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>AMFS_CEO</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>